# Multi-Agent-Studio

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.agent/: stream.jsonl
apps/orchestrator/: pyproject.toml
apps/orchestrator/app/: config.py  launcher.py  main.py
apps/orchestrator/app/agents/: base.py  config.py  factory.py  opencode.py
apps/orchestrator/app/api/: artifacts.py  models.json  models.py  planner_chat.py  planner_tools.py  runs.py  settings.py  shared_doc.py  tasks.py  workflows.py  workspace.py
apps/orchestrator/app/core/: agent_llm.py  agent_runner.py  agent_tools.py  database.py  debug_logger.py  director_loop.py  director_prompts.py  director_tools.py  local_bus.py  local_engine.py  local_sandbox.py  node_runner.py  sandbox_backend.py  task_scheduler.py  world_model.py
apps/orchestrator/app/mcp_server/: server.py  tools.py
apps/orchestrator/app/memory/: context.py  workspace_share.py
apps/orchestrator/app/models/: db.py  schemas.py  task.py
apps/orchestrator/app/sandbox/: checkpoint.py  manager.py  provision.py
apps/orchestrator/app/streaming/: file_watcher.py  parser.py  publisher.py  throttler.py
apps/orchestrator/app/workflows/: activities.py  compiler.py  dag_workflow.py  plan_parser.py  task_compiler.py  worker.py
apps/orchestrator/app/ws/: hub.py
apps/orchestrator/tests/: conftest.py  test_director_loop.py  test_engine_features.py  test_plan_parser.py
doc/: agent-comparison.md  agent-improvement-plan.md  product-orchestrator-interaction-model.md  workflow-dual-mode-design.md
infra/: docker-compose.yml
(+130 files in other folders)
