[tool.poetry]
name = "multi-agent-studio-orchestrator"
version = "0.1.0"
description = "AI Multi-Agent Workflow Orchestration Engine"
authors = ["Multi-Agent Studio Team"]
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
temporalio = "^1.8.0"
docker = "^7.1.0"
redis = "^5.2.0"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
httpx = "^0.28.0"
aiocache = "^0.12.0"
python-json-logger = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[tool.poetry.scripts]
server = "app.main:run_server"
worker = "app.workflows.worker:run_worker"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
